<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_sb"
    tools:context=".MainActivity">


    <RadioGroup
        android:id="@+id/rgMilk"
        android:layout_width="141dp"
        android:layout_height="159dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.954"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tableLayout"
        app:layout_constraintVertical_bias="0.046">

        <RadioButton
            android:id="@+id/rbMilk"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:text="@string/milk"
            android:textAlignment="center"
            android:textAllCaps="true"
            android:textColor="@color/green"
            android:textStyle="bold" />

        <RadioButton
            android:id="@+id/rbAlmondMilk"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:text="@string/almondMilk"
            android:textAlignment="center"
            android:textAllCaps="true"
            android:textColor="@color/green"
            android:textStyle="bold" />

        <RadioButton
            android:id="@+id/rbNoMilk"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:text="@string/noMilk"
            android:textAlignment="center"
            android:textAllCaps="true"
            android:textColor="@color/green"
            android:textStyle="bold" />
    </RadioGroup>

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="324dp"
        android:layout_height="58dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.583"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.173">

        <RadioButton
            android:id="@+id/rdbTe"
            android:layout_width="100dp"
            android:layout_height="50dp"
            android:layout_margin="4dp"
            android:background="@color/green"
            android:buttonTint="#F3F2F0"
            android:text="@string/tea"
            android:textAlignment="viewStart"
            android:textAllCaps="true"
            android:textColor="#F3F2F0"
            android:textSize="12sp"
            android:textStyle="bold|italic" />

        <RadioButton
            android:id="@+id/rdbColdBrew"
            android:layout_width="100dp"
            android:layout_height="50dp"
            android:layout_margin="4dp"
            android:background="@color/green"
            android:buttonTint="@color/whiteBase"
            android:minHeight="48dp"
            android:text="@string/coldbrew"
            android:textAlignment="viewStart"
            android:textAllCaps="true"
            android:textColor="@color/whiteBase"
            android:textSize="12sp"
            android:textStyle="bold|italic" />

        <RadioButton
            android:id="@+id/rbEspresso"
            android:layout_width="100dp"
            android:layout_height="50dp"
            android:layout_margin="4dp"
            android:background="@color/green"
            android:buttonTint="@color/whiteBase"
            android:minHeight="48dp"
            android:text="@string/expreso"
            android:textAlignment="viewStart"
            android:textAllCaps="true"
            android:textColor="@color/whiteBase"
            android:textSize="12sp"
            android:textStyle="bold|italic" />

    </RadioGroup>

    <ImageView
        android:id="@+id/ivEspresso"
        android:layout_width="80dp"
        android:layout_height="85dp"
        android:layout_marginBottom="7dp"
        app:layout_constraintBottom_toTopOf="@+id/radioGroup"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.44"
        app:layout_constraintStart_toEndOf="@+id/ivColdBrew"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0"
        app:srcCompat="@drawable/espresso" />

    <ImageView
        android:id="@+id/ivColdBrew"
        android:layout_width="80dp"
        android:layout_height="85dp"
        android:layout_marginStart="20dp"
        android:layout_marginBottom="7dp"
        app:layout_constraintBottom_toTopOf="@+id/radioGroup"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.461"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0"
        app:srcCompat="@drawable/coldbrew" />

    <ImageView
        android:id="@+id/ivTea"
        android:layout_width="80dp"
        android:layout_height="85dp"
        android:layout_marginBottom="7dp"
        app:layout_constraintBottom_toTopOf="@+id/radioGroup"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.125"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0"
        app:srcCompat="@drawable/tea" />

    <Switch
        android:id="@+id/swtAzucar"
        android:layout_width="120dp"
        android:layout_height="48dp"
        android:shadowColor="@color/green"
        android:text="@string/azucar"
        android:textAlignment="textEnd"
        android:textAllCaps="false"
        android:textColor="@color/green"
        android:textSize="20sp"
        android:textStyle="bold|italic"
        android:thumbTint="@color/green"
        android:trackTint="@color/green"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.066"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radioGroup"
        app:layout_constraintVertical_bias="0.394" />

    <EditText
        android:id="@+id/fldQuantity"
        android:layout_width="158dp"
        android:layout_height="48dp"
        android:layout_marginStart="10dp"
        android:ems="10"
        android:hint="@string/ingrese_la_cantidad"
        android:inputType="numberDecimal"
        android:textColor="@color/green"
        android:textColorHint="@color/green"
        android:textStyle="bold|italic"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/swtAzucar"
        app:layout_constraintVertical_bias="0.602" />

    <Button
        android:id="@+id/btnOrder"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="10dp"
        android:backgroundTint="@color/green"
        android:text="@string/ordenar"
        android:textColor="#F2F1EF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/fldQuantity"
        app:layout_constraintTop_toBottomOf="@+id/swtAzucar"
        app:layout_constraintVertical_bias="0.602" />

    <TextView
        android:id="@+id/tvTotal"
        android:layout_width="201dp"
        android:layout_height="48dp"
        android:background="#80EEEDEB"
        android:fontFamily="sans-serif-black"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textColor="#1F3933"
        android:textSize="20sp"
        android:textStyle="italic"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.503"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnOrder"
        app:layout_constraintVertical_bias="0.849"
        tools:text="@string/total" />

    <TextView
        android:id="@+id/tvElegirTamano"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/elegir"
        android:textColor="@color/green"
        android:textStyle="bold|italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radioGroup" />

    <TableLayout
        android:id="@+id/tableLayout"
        android:layout_width="328dp"
        android:layout_height="107dp"
        android:layout_marginTop="1dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.513"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvElegirTamano"
        app:layout_constraintVertical_bias="0.042">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:id="@+id/imageView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="36dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.0"
                    app:srcCompat="@drawable/coffeesize_tall" />

                <ImageView
                    android:id="@+id/imageView2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@+id/imageView3"
                    app:layout_constraintHorizontal_bias="0.495"
                    app:layout_constraintStart_toEndOf="@+id/imageView"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.0"
                    app:srcCompat="@drawable/coffeesize_grande" />

                <ImageView
                    android:id="@+id/imageView3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.63"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.0"
                    app:srcCompat="@drawable/coffeesize_venti" />

                <ImageView
                    android:id="@+id/imageView4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.689"
                    app:layout_constraintStart_toEndOf="@+id/imageView3"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.0"
                    app:srcCompat="@drawable/coffeesize_trenta" />
            </androidx.constraintlayout.widget.ConstraintLayout>

        </TableRow>

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="match_parent">

            <RadioGroup
                android:id="@+id/rgCoffeeSize"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/rbGrande"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="2dp"
                    android:background="#E6FFFFFF"
                    android:text="@string/grande"
                    android:textAlignment="viewStart"
                    android:textAllCaps="true"
                    android:textColor="@color/green"
                    android:textStyle="bold" />

                <RadioButton
                    android:id="@+id/rbTall"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="2dp"
                    android:background="#E6FFFFFF"
                    android:text="@string/tall"
                    android:textAlignment="viewStart"
                    android:textAllCaps="true"
                    android:textColor="@color/green"
                    android:textStyle="bold" />

                <RadioButton
                    android:id="@+id/rbVenti"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="2dp"
                    android:background="#E6FFFFFF"
                    android:text="@string/venti"
                    android:textAlignment="viewStart"
                    android:textAllCaps="true"
                    android:textColor="@color/green"
                    android:textStyle="bold" />

                <RadioButton
                    android:id="@+id/rbTrenta"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="2dp"
                    android:background="#E6FFFFFF"
                    android:text="@string/trenta"
                    android:textAlignment="viewStart"
                    android:textAllCaps="true"
                    android:textColor="@color/green"
                    android:textStyle="bold" />
            </RadioGroup>
        </TableRow>

    </TableLayout>

</androidx.constraintlayout.widget.ConstraintLayout>